@@ -18,6 +18,11 @@ rand = "0.8"
 serde = { version = "1.0", features = ["derive"], optional = true }
 hex = "0.4.3"
 trust-dns-proto = { version = "0.21.2", default-features = false }
+url = "2.2.2"
+
+[features]
+default = []
+serde = ["dep:serde", "url/serde"]
 
 [dev-dependencies]
 criterion = "0.3"
